--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang=”en”>
 <head>
-  <meta charset="utf-8">
-  <title>HTML5 Demo: getUserMedia (Treehouse Blog)</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="./js/scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+    <!-- Name of your awesome camera app -->
+    <title>Camera App</title>
+    <!-- Link to your main style sheet-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="video-container">
-    <video id="camera-stream" width="500" autoplay></video>
-  </div>
-  <script src="script.js"></script>
+    <!-- Camera -->
+    <main id="camera">
+        <!-- Camera sensor -->
+        <canvas id="camera--sensor"></canvas>
+        <!-- Camera view -->
+        <video id="camera--view" autoplay playsinline></video>
+        <!-- Camera output -->
+        <img src="//:0" alt="" id="camera--output">
+        <!-- Camera trigger -->
+        <button id="camera--trigger">Take a picture</button>
+    </main>
+    <!-- Reference to your JavaScript file -->
+    <script src="app.js"></script>
 </body>
 </html>
