--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./js/scripts.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Name of your awesome camera app -->
     <title>Camera App</title>
