--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>WebRTC: Still photo capture demo</title>
 	<meta charset='utf-8'>
-	<link rel="stylesheet" href="main.css" type="text/css" media="all">
-	<script src="capture.js">
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+	<script src="js/stripts.js">
 	</script>
 </head>
 <body>
