--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>WebRTC: Still photo capture demo</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-	<script src="js/stripts.js">
+	<script src="js/scripts.js">
 	</script>
 </head>
 <body>
