--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>WebRTC: Still photo capture demo</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-	<script src="js/scripts.js">
-	</script>
+	<script src="js/scripts.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
 <div class="contentarea">
@@ -21,6 +21,7 @@
     <img id="photo" alt="The screen capture will appear in this box."> 
   </div>
     <button id="startbutton">Take photo</button> 
+    <button id="retakebutton">Retake photo</button> 
   </div>
   <canvas id="canvas">
   </canvas>
