--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
 	<script src="js/scripts.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.js"></script>
 </head>
 <body>
 <div class="contentarea">
