--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>WebRTC: Still photo capture demo</title>
+	<title>Food Recognition App</title>
 	<meta charset='utf-8'>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
@@ -12,11 +12,8 @@
 <body>
 <div class="contentarea">
 	<h1>
-		MDN - WebRTC: Still photo capture demo
+		Rico | Food Recognition App
 	</h1>
-	<p>
-		This example demonstrates how to set up a media stream using your built-in webcam, fetch an image from that stream, and create a PNG using that image.
-	</p>
   <div class="camera">
     <video id="video">Video stream not available.</video>
     <div class="output">
@@ -29,7 +26,7 @@
   </canvas>
   
 	<p>
-		Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos"> Taking still photos with WebRTC</a> to learn more about the technologies used here.
+		check this thing out!
 	</p>
 </div>
 </body>
